Add alt tag to images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header id="header">
         <div id="header-img-container">
-            <img id="header-img" src="images/logo3.png" alt="logo">
+            <img id="header-img" src="images/logo3.png" alt="AkamakiART Logo">
         </div>
         <input type="checkbox" id="nav-toggle" role="button">
         <label id="nav-toggle-label" for="nav-toggle">
@@ -48,7 +48,7 @@
     <section id="features-section">
         <div class="feature">
             <div class="icon">
-                <img src="images/fairtrade.png" alt="">
+                <img src="images/fairtrade.png" alt="Fairtrade">
             </div>
             <div class="desc">
                 <h2>Fair Trade</h2>
@@ -57,7 +57,7 @@
         </div>
         <div class="feature">
             <div  class="icon">
-                <img src="images/charitable.png" alt="">
+                <img src="images/charitable.png" alt="Charitable">
             </div>
             <div class="desc">
                 <h2>Conscious Shopping</h2>
@@ -66,7 +66,7 @@
         </div>
         <div class="feature">
             <div  class="icon">
-                <img src="images/safepayment1.png" alt="Icon representing safe payment">
+                <img src="images/safepayment1.png" alt="Safe payment">
             </div>
             <div class="desc">
                 <h2>Safe Payment</h2>
@@ -76,19 +76,19 @@
     </section>
     <section id="howitworks-section">
         <div class="step-container">
-            <img src="images/one.svg" alt="" class="step-img">
+            <img src="images/one.svg" alt="One" class="step-img">
             <p class="step-information">Take a look at our artisans' products. Choose any product that takes your attention.</p>
         </div>
         <div class="step-container">
-            <img src="images/two.svg" alt="" class="step-img">
+            <img src="images/two.svg" alt="Two" class="step-img">
             <p class="step-information">Go to the artisans' profile to know its story and see all its products.</p>
         </div>
         <div class="step-container">
-            <img src="images/three.svg" alt="" class="step-img">
+            <img src="images/three.svg" alt="Three" class="step-img">
             <p class="step-information">Contact the artisan if you want to know more information about him/her and to get a personalised work.</p>
         </div>
         <div class="step-container">
-            <img src="images/four.svg" alt="" class="step-img">
+            <img src="images/four.svg" alt="Four" class="step-img">
             <p class="step-information">Buy your personalised product.</p>
         </div>
     </section>
@@ -97,11 +97,11 @@
             <div class="product">
                 <a href="#" class="artisan-link">
                     <div class="artisan">
-                        <img src="images/artisan1.jpg" alt="" class="artisan-img">
+                        <img src="images/artisan1.jpg" alt="Artisan profile image" class="artisan-img">
                         <h5 class="artisan-name">Emidth</h5>
                     </div>
                 </a>
-                <img class="product-img" src="images/product1.jpeg" alt="">
+                <img class="product-img" src="images/product1.jpeg" alt="Product image">
                 <h3>Colorful wayuu bag</h3>
                 <p class="product-description">Made with the guajiro thread and with the typical fabric of the Colombian Wayuus ethnic group.</p>
                 <a href="#" class="product-details">More details  <i class="fas fa-angle-double-right"></i></a>
@@ -113,7 +113,7 @@
                         <h5 class="artisan-name">Juan</h5>
                     </div>
                 </a>
-                <img class="product-img" src="images/product2.jpg" alt="">
+                <img class="product-img" src="images/product2.jpg" alt="Product image">
                 <h3>Macrame wipala wristband</h3>
                 <p class="product-description">Made with macrame thread and the inca macrame fabric.</p>
                 <a href="#" class="product-details">More details  <i class="fas fa-angle-double-right"></i></a>
@@ -121,11 +121,11 @@
             <div class="product">
                 <a href="#" class="artisan-link">
                     <div class="artisan">
-                        <img src="images/artisan1.jpg" alt="" class="artisan-img">
+                        <img src="images/artisan1.jpg" alt="Artisan profile image" class="artisan-img">
                         <h5 class="artisan-name">Wayra</h5>
                     </div>
                 </a>
-                <img class="product-img" src="images/product3.jpg" alt="">
+                <img class="product-img" src="images/product3.jpg" alt="Product image">
                 <h3>Blue otavalo poncho</h3>
                 <p class="product-description">Handmade typical Otavalo poncho</p>
                 <a href="#" class="product-details">More details  <i class="fas fa-angle-double-right"></i></a>
