Change div tag for article

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -75,22 +75,22 @@
         </div>
     </section>
     <section id="howitworks-section">
-        <div class="step-container">
+        <article class="step-container">
             <img src="images/one.svg" alt="One" class="step-img">
             <p class="step-information">Take a look at our artisans' products. Choose any product that takes your attention.</p>
-        </div>
-        <div class="step-container">
+        </article>
+        <article class="step-container">
             <img src="images/two.svg" alt="Two" class="step-img">
             <p class="step-information">Go to the artisans' profile to know its story and see all its products.</p>
-        </div>
-        <div class="step-container">
+        </article>
+        <article class="step-container">
             <img src="images/three.svg" alt="Three" class="step-img">
             <p class="step-information">Contact the artisan if you want to know more information about him/her and to get a personalised work.</p>
-        </div>
-        <div class="step-container">
+        </article>
+        <article class="step-container">
             <img src="images/four.svg" alt="Four" class="step-img">
             <p class="step-information">Buy your personalised product.</p>
-        </div>
+        </article>
     </section>
     <section id="products-section">
         <div class="products">
